fixed html alignment issue

--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
   .description {
     white-space: pre-wrap;
     background-color: #d3d3d3;
-    margin: 10px;
   }
   
   .time-block {
@@ -43,7 +42,6 @@ body {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
-    margin: 10px;
   }
   
   .past {
@@ -67,7 +65,6 @@ body {
     border-bottom-right-radius: 15px;
     background-color: #06aed5;
     color: white;
-    height: 50px;
   }
   
   .saveBtn i:hover {
